Update NextLineGeneration.java